[ServiceWorker] Fix a copy/paste miss

For Unregister related codes:
kServiceWorkerUpdateErrorPrefix --> kServiceWorkerUnregisterErrorPrefix

BUG=775412

Change-Id: Ib2a0dff68caef88cacd7ce6d449a7ef6adb4a8c6
Reviewed-on: https://chromium-review.googlesource.com/724439
Reviewed-by: Matt Falkenhagen <falken@chromium.org>
Commit-Queue: Han Leon <leon.han@intel.com>
Cr-Commit-Position: refs/heads/master@{#509639}
Former-commit-id: 7c8e22db4b1fd59fbe8ca6c0a62542ab1269c27e